NetBSD Problem Report #52174

From martin@aprisoft.de  Tue Apr 18 07:14:44 2017
Return-Path: <martin@aprisoft.de>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 06E637A170
	for <gnats-bugs@gnats.NetBSD.org>; Tue, 18 Apr 2017 07:14:44 +0000 (UTC)
Message-Id: <20170418071428.177005CC761@emmas.aprisoft.de>
Date: Tue, 18 Apr 2017 09:14:28 +0200 (CEST)
From: martin@NetBSD.org
Reply-To: martin@NetBSD.org
To: gnats-bugs@NetBSD.org
Subject: lots of autoload errors
X-Send-Pr-Version: 3.95

>Number:         52174
>Category:       kern
>Synopsis:       lots of autoload errors
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Apr 18 07:15:00 +0000 2017
>Closed-Date:    Sat Apr 29 06:20:23 +0000 2017
>Last-Modified:  Sat Apr 29 06:20:23 +0000 2017
>Originator:     Martin Husemann
>Release:        NetBSD 7.99.70
>Organization:
The NetBSD Foundation, Inc.
>Environment:
System: NetBSD whoever-brings-the-night.aprisoft.de 7.99.70 NetBSD 7.99.70 (WHOEVER) #112: Mon Apr 17 20:30:18 CEST 2017 martin@martins.aprisoft.de:/ssd/src/sys/arch/sparc64/compile/WHOEVER sparc64
Architecture: sparc64
Machine: sparc64
>Description:

The new diagnostic message for autoloading modules before / is available
triggers a lot. Maybe we should pass an optional flag for "verbose" modules
and be silent about them?

>How-To-Repeat:

See for example this dmesg (search for "module_autoload:"):


Copyright (c) 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2005,
    2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014, 2015, 2016, 2017
    The NetBSD Foundation, Inc.  All rights reserved.
Copyright (c) 1982, 1986, 1989, 1991, 1993
    The Regents of the University of California.  All rights reserved.

NetBSD 7.99.70 (WHOEVER) #112: Mon Apr 17 20:30:18 CEST 2017
	martin@martins.aprisoft.de:/ssd/src/sys/arch/sparc64/compile/WHOEVER
total memory = 8192 MB
avail memory = 8025 MB
timecounter: Timecounters tick every 10.000 msec
Kernelized RAIDframe activated
running cgd selftest aes-xts-256 aes-xts-512 done
mainbus0 (root): SUNW,Sun-Blade-2500-S (Sun Blade 2500): hostid 83cd9ff1
cpu0 at mainbus0: SUNW,UltraSPARC-IIIi @ 1600 MHz, CPU id 0
cpu0: manuf 3e, impl 16, mask 34
cpu0: system tick frequency 12 MHz
cpu0: 32K instruction (32 b/l), 64K data (32 b/l), 1024K external (64 b/l)
cpu1 at mainbus0: SUNW,UltraSPARC-IIIi @ 1600 MHz, CPU id 1
cpu1: manuf 3e, impl 16, mask 34
cpu1: system tick frequency 12 MHz
cpu1: 32K instruction (32 b/l), 64K data (32 b/l), 1024K external (64 b/l)
memory-controller at mainbus0 not configured
memory-controller at mainbus0 not configured
schizo0 at mainbus0: addr 4000e600000: Tomatillo, version 4, ign 700, bus A 0 to 0
schizo0:  pci0 at schizo0
pci0: i/o space, memory space enabled
bge0 at pci0 dev 3 function 0: Broadcom BCM5703 Gigabit Ethernet
bge0: interrupting at ivec 371c
bge0: HW config 00000000, 00000000, 00000000, 00000000 00000000
bge0: ASIC BCM5702/5703 A2 (0x1002), Ethernet address 00:03:ba:cd:9f:f1
brgphy0 at bge0 phy 1: BCM5703 1000BASE-T media interface, rev. 2
brgphy0: 10baseT, 10baseT-FDX, 100baseTX, 100baseTX-FDX, 1000baseT, 1000baseT-FDX, auto
siisata0 at pci0 dev 2 function 0module_autoload: trying to load `pciverbose' before root is mounted
module_autoload: trying to load `pciverbose' before root is mounted
: vendor 1095 product 3124 (rev. 0x02)
siisata0: interrupting at ivec 700
siisata0: SiI3124, 3.0Gb/s
siisata0: 32-bit 66MHz PCI
atabus0 at siisata0 channel 0
atabus1 at siisata0 channel 1
atabus2 at siisata0 channel 2
atabus3 at siisata0 channel 3
ppm at mainbus0 not configured
schizo1 at mainbus0: addr 4000ef00000: Tomatillo, version 4, ign 740, bus B 0 to 0
schizo1:  pci1 at schizo1
pci1: i/o space, memory space enabled
mpt0 at pci1 dev 4 function 0module_autoload: trying to load `pciverbose' before root is mounted
module_autoload: trying to load `pciverbose' before root is mounted
: vendor 1000 product 0030 (rev. 0x07)
mpt0: applying 1030 quirk
mpt0: interrupting at ivec 1f69
scsibus0 at mpt0: 16 targets, 8 luns per target
mpt1 at pci1 dev 4 function 1module_autoload: trying to load `pciverbose' before root is mounted
module_autoload: trying to load `pciverbose' before root is mounted
: vendor 1000 product 0030 (rev. 0x07)
mpt1: applying 1030 quirk
mpt1: interrupting at ivec 1f68
scsibus1 at mpt1: 16 targets, 8 luns per target
schizo2 at mainbus0: addr 4000f600000: Tomatillo, version 4, ign 780, bus A 0 to 1
schizo2:  pci2 at schizo2
pci2: i/o space, memory space enabled
ebus0 at pci2 dev 7 function 0
module_autoload: trying to load `pciverbose' before root is mounted
module_autoload: trying to load `pciverbose' before root is mounted
ebus0: vendor 10b9 product 1533, revision 0x00
flashprom at ebus0 addr 0-fffff not configured
rtc0 at ebus0 addr 70-71: mc146818 compatible time-of-day clock: m5823
pcfiic0 at ebus0 addr 320-321 ipl 2e
iic0 at pcfiic0: I2C bus
i2c-bridge at iic0 addr 0x09 not configured
gpio at iic0 addr 0x18 not configured
hardware-monitor at iic0 addr 0x29 not configured
dbcool0 at iic0 addr 0x2c
dbcool0: ADM1031 dBCool(tm) Controller (rev 0x0083)
dbcool1 at iic0 addr 0x2e
dbcool1: ADM1031 dBCool(tm) Controller (rev 0x0083)
gpio at iic0 addr 0x37 not configured
gpio at iic0 addr 0x4e not configured
seeprom0 at iic0 addr 0x50: audio-card-fru-prom: size 8192
seeprom1 at iic0 addr 0x51: motherboard-fru-prom: size 8192
seeprom2 at iic0 addr 0x54: scsi-backplane-fru-prom: size 8192
spdmem0 at iic0 addr 0x5b
spdmem0: DDR SDRAM (registered), data ECC, 1GB, 286MHz (PC-2300)
spdmem0: 13 rows, 11 cols, 2 ranks, 4 banks/chip, 7.0ns cycle time
spdmem0: tAA-tRCD-tRP-tRAS: 1-3-3-7
spdmem0: voltage SSTL 2.5V, refresh time 7.8us (self-refreshing)
spdmem1 at iic0 addr 0x5c
spdmem1: DDR SDRAM (registered), data ECC, 1GB, 286MHz (PC-2300)
spdmem1: 13 rows, 11 cols, 2 ranks, 4 banks/chip, 7.0ns cycle time
spdmem1: tAA-tRCD-tRP-tRAS: 1-3-3-7
spdmem1: voltage SSTL 2.5V, refresh time 7.8us (self-refreshing)
spdmem2 at iic0 addr 0x5d
spdmem2: DDR SDRAM (registered), data ECC, 1GB, 286MHz (PC-2300)
spdmem2: 13 rows, 11 cols, 2 ranks, 4 banks/chip, 7.0ns cycle time
spdmem2: tAA-tRCD-tRP-tRAS: 1-3-3-7
spdmem2: voltage SSTL 2.5V, refresh time 7.8us (self-refreshing)
spdmem3 at iic0 addr 0x5e
spdmem3: DDR SDRAM (registered), data ECC, 1GB, 286MHz (PC-2300)
spdmem3: 13 rows, 11 cols, 2 ranks, 4 banks/chip, 7.0ns cycle time
spdmem3: tAA-tRCD-tRP-tRAS: 1-3-3-7
spdmem3: voltage SSTL 2.5V, refresh time 7.8us (self-refreshing)
spdmem4 at iic0 addr 0x63
spdmem4: DDR SDRAM (registered), data ECC, 1GB, 286MHz (PC-2300)
spdmem4: 13 rows, 11 cols, 2 ranks, 4 banks/chip, 7.0ns cycle time
spdmem4: tAA-tRCD-tRP-tRAS: 1-3-3-7
spdmem4: voltage SSTL 2.5V, refresh time 7.8us (self-refreshing)
spdmem5 at iic0 addr 0x64
spdmem5: DDR SDRAM (registered), data ECC, 1GB, 286MHz (PC-2300)
spdmem5: 13 rows, 11 cols, 2 ranks, 4 banks/chip, 7.0ns cycle time
spdmem5: tAA-tRCD-tRP-tRAS: 1-3-3-7
spdmem5: voltage SSTL 2.5V, refresh time 7.8us (self-refreshing)
spdmem6 at iic0 addr 0x65
spdmem6: DDR SDRAM (registered), data ECC, 1GB, 286MHz (PC-2300)
spdmem6: 13 rows, 11 cols, 2 ranks, 4 banks/chip, 7.0ns cycle time
spdmem6: tAA-tRCD-tRP-tRAS: 1-3-3-7
spdmem6: voltage SSTL 2.5V, refresh time 7.8us (self-refreshing)
spdmem7 at iic0 addr 0x66
spdmem7: DDR SDRAM (registered), data ECC, 1GB, 286MHz (PC-2300)
spdmem7: 13 rows, 11 cols, 2 ranks, 4 banks/chip, 7.0ns cycle time
spdmem7: tAA-tRCD-tRP-tRAS: 1-3-3-7
spdmem7: voltage SSTL 2.5V, refresh time 7.8us (self-refreshing)
clock-generator at iic0 addr 0x69 not configured
power at ebus0 addr 800-82f ipl 20 not configured
com0 at ebus0 addr 3f8-3ff ipl 2c: ns16550a, working fifo
com1 at ebus0 addr 2e8-2ef ipl 2c: ns16550a, working fifo
dma at ebus0 addr 0-ffff not configured
alipm0 at pci2 dev 6 function 0: 223KHz clock
iic1 at alipm0: I2C bus
card-reader at iic1 addr 0x20 not configured
autri0 at pci2 dev 8 function 0module_autoload: trying to load `pciverbose' before root is mounted
module_autoload: trying to load `pciverbose' before root is mounted
: vendor 10b9 product 5451 (rev. 0x02)
autri0: interrupting at ivec 7a4
autri0: ac97: Analog Devices AD1881A codec; headphone, Analog Devices Phat Stereo
audio0 at autri0: full duplex, playback, capture, mmap, independent
autri0: Virtual format configured - Format SLINEAR, precision 16, channels 2, frequency 48000
midi0 at autri0: 4DWAVE MIDI UART
ohci0 at pci2 dev 10 function 0module_autoload: trying to load `pciverbose' before root is mounted
module_autoload: trying to load `pciverbose' before root is mounted
: vendor 10b9 product 5237 (rev. 0x03)
ohci0: interrupting at ivec 7a7
module_autoload: trying to load `pciverbose' before root is mounted
ohci0: OHCI version 1.0, legacy support
usb0 at ohci0: USB revision 1.0
ohci1 at pci2 dev 11 function 0module_autoload: trying to load `pciverbose' before root is mounted
module_autoload: trying to load `pciverbose' before root is mounted
: vendor 10b9 product 5237 (rev. 0x03)
ohci1: interrupting at ivec 7a6
module_autoload: trying to load `pciverbose' before root is mounted
ohci1: OHCI version 1.0, legacy support
usb1 at ohci1: USB revision 1.0
aceride0 at pci2 dev 13 function 0: Acer Labs M5229 UDMA IDE Controller (rev. 0xc4)
aceride0: bus-master DMA support present
aceride0: using PIO transfers above 137GB as workaround for 48bit DMA access bug, expect reduced performance
aceride0: primary channel configured to native-PCI mode
aceride0: using ivec 1f98 for native-PCI interrupt
atabus4 at aceride0 channel 0
aceride0: secondary channel configured to native-PCI mode
atabus5 at aceride0 channel 1
ppb0 at pci2 dev 4 function 0module_autoload: trying to load `pciverbose' before root is mounted
module_autoload: trying to load `pciverbose' before root is mounted
: vendor 104c product ac23 (rev. 0x02)
pci3 at ppb0 bus 1
pci3: i/o space, memory space enabled
ohci2 at pci3 dev 8 function 0module_autoload: trying to load `pciverbose' before root is mounted
module_autoload: trying to load `pciverbose' before root is mounted
: vendor 1033 product 0035 (rev. 0x43)
ohci2: interrupting at ivec 794
module_autoload: trying to load `pciverbose' before root is mounted
ohci2: OHCI version 1.0
usb2 at ohci2: USB revision 1.0
ohci3 at pci3 dev 8 function 1module_autoload: trying to load `pciverbose' before root is mounted
module_autoload: trying to load `pciverbose' before root is mounted
: vendor 1033 product 0035 (rev. 0x43)
ohci3: interrupting at ivec 795
module_autoload: trying to load `pciverbose' before root is mounted
ohci3: OHCI version 1.0
usb3 at ohci3: USB revision 1.0
ehci0 at pci3 dev 8 function 2module_autoload: trying to load `pciverbose' before root is mounted
module_autoload: trying to load `pciverbose' before root is mounted
: vendor 1033 product 00e0 (rev. 0x04)
ehci0: interrupting at ivec 796
module_autoload: trying to load `pciverbose' before root is mounted
ehci0: EHCI version 1.0
ehci0: companion controllers, 3 ports each: ohci2 ohci3
usb4 at ehci0: USB revision 2.0
fwohci0 at pci3 dev 11 function 0module_autoload: trying to load `pciverbose' before root is mounted
module_autoload: trying to load `pciverbose' before root is mounted
: vendor 104c product 8024 (rev. 0x00)
fwohci0: interrupting at ivec 797
fwohci0: OHCI version 1.10 (ROM=1)
fwohci0: No. of Isochronous channels is 4.
fwohci0: EUI64 00:05:16:00:00:41:f8:4a
fwohci0: Phy 1394a available S400, 3 ports.
fwohci0: Link S400, max_rec 2048 bytes.
ieee1394if0 at fwohci0: IEEE1394 bus
fwip0 at ieee1394if0: IP over IEEE1394
fwohci0: Initiate bus reset
ppm at mainbus0 not configured
schizo3 at mainbus0: addr 4000ff00000: Tomatillo, version 4, ign 7c0, bus B 0 to 0
schizo3:  pci4 at schizo3
pci4: i/o space, memory space enabled
radeonfb0 at pci4 dev 2 function 0module_autoload: trying to load `pciverbose' before root is mounted
module_autoload: trying to load `pciverbose' before root is mounted
: vendor 1002 product 5159 (rev. 0x00)
radeonfb0: Video BIOS not present
radeonfb0: No video BIOS, using default clocks
radeonfb0: refclk = 27.000 MHz, refdiv = 12 minpll = 125000, maxpll = 400000
no data for est. mode 640x480x67
radeonfb0: 64 MB aperture at 0x08000000, 64 KB registers at 0x00100000
radeonfb0: display 0: initial virtual resolution 1280x1024 at 8 bpp
radeonfb0: using 32 MB per display
radeonfb0: port 0: physical 1280x1024 60Hz
radeonfb0: port 1: physical 1280x1024 75Hz
wsdisplay0 at radeonfb0 kbdmux 1: console (fb, vt100 emulation)
wsmux1: connecting to wsdisplay0
wsdisplay0: screen 1-3 added (fb, vt100 emulation)
drm at radeonfb0 not configured
i2c at mainbus0 not configured
pcons at mainbus0 not configured
fwohci0: BUS reset
fwohci0: node_id=0xc800ffc0, gen=1, CYCLEMASTER mode
ieee1394if0: 1 nodes, maxhop <= 0 cable IRM irm(0) (me)
ieee1394if0: bus manager 0
timecounter: Timecounter "clockinterrupt" frequency 100 Hz quality 0
timecounter: Timecounter "tick-counter" frequency 1600000000 Hz quality 100
timecounter: Timecounter "stick-counter" frequency 12000000 Hz quality 200
No counter-timer -- using %stick at 12MHz as system clock.
scsibus0: waiting 2 seconds for devices to settle...
scsibus1: waiting 2 seconds for devices to settle...
uhub0 at usb0: vendor 10b9 (0x10b9) OHCI root hub (0000), class 9/0, rev 1.00/1.00, addr 1
uhub0: 2 ports with 2 removable, self powered
uhub1 at usb1: vendor 10b9 (0x10b9) OHCI root hub (0000), class 9/0, rev 1.00/1.00, addr 1
uhub1: 2 ports with 2 removable, self powered
uhub2 at usb2: vendor 1033 (0x1033) OHCI root hub (0000), class 9/0, rev 1.00/1.00, addr 1
uhub2: 3 ports with 3 removable, self powered
uhub3 at usb3: vendor 1033 (0x1033) OHCI root hub (0000), class 9/0, rev 1.00/1.00, addr 1
uhub3: 2 ports with 2 removable, self powered
uhub4 at usb4: vendor 1033 (0x1033) EHCI root hub (0000), class 9/0, rev 2.00/1.00, addr 1
uhub4: 5 ports with 5 removable, self powered
siisata0 port 3: device present, speed: 3.0Gb/s
wd0 at atabus3 drive 0
wd0: <Samsung SSD 850 PRO 256GB>
wd0: drive supports 1-sector PIO transfers, LBA48 addressing
wd0: 238 GB, 496149 cyl, 16 head, 63 sec, 512 bytes/sect x 500118192 sectors
wd0: GPT GUID: 7787bb2e-19c7-46df-a243-f98c2feb8eab
dk0 at wd0: "sb2k5swap", 93008640 blocks at 36, type: swap
dk1 at wd0: "sb2k5root", 407109480 blocks at 93008676, type: ffs
wd0: drive supports PIO mode 4, DMA mode 2, Ultra-DMA mode 6 (Ultra/133)
wd0(siisata0:3:0): using PIO mode 4, DMA mode 2, Ultra-DMA mode 6 (Ultra/133) (using DMA)
ehci0: handing over full speed device on port 5 to ohci3
uhidev0 at uhub1 port 1 configuration 1 interface 0
uhidev0: Microsoft (0x45e) Microsoft IntelliMouse M-BM-. with IntelliEye (0x25), rev 1.10/1.07, addr 2, iclass 3/1
ums0 at uhidev0: 3 buttons and Z dir
wsmouse0 at ums0 mux 0
uplcom0 at uhub2 port 3
uplcom0: Prolific Technology Inc. (0x67b) USB 2.0 To COM Device (0x2303), rev 1.10/3.00, addr 2
ucom0 at uplcom0
wd1 at atabus4 drive 0
wd1: <SINTECHI HighSpeed SD to CF Adapter V1.0>
wd1: drive supports 1-sector PIO transfers, LBA addressing
wd1: 3796 MB, 7712 cyl, 16 head, 63 sec, 512 bytes/sect x 7774208 sectors
dk2 at wd1: "sb2.5kboot/a", 7774208 blocks at 0, type: ffs
wd1: drive supports PIO mode 4, DMA mode 2, Ultra-DMA mode 5 (Ultra/100)
wd1(aceride0:0:0): using PIO mode 4, Ultra-DMA mode 5 (Ultra/100) (using DMA)
atapibus0 at atabus5: 2 targets
cd0 at atapibus0 drive 0: <JLMS XJ-HD166S, , D3S4> cdrom removable
cd0: drive supports PIO mode 4, DMA mode 2, Ultra-DMA mode 2 (Ultra/33)
cd0(aceride0:1:0): using PIO mode 4, Ultra-DMA mode 2 (Ultra/33) (using DMA)
module_autoload: trying to load `usbverbose' before root is mounted
module_autoload: trying to load `usbverbose' before root is mounted
uhub5 at uhub1 port 2module_autoload: trying to load `usbverbose' before root is mounted
module_autoload: trying to load `usbverbose' before root is mounted
: vendor 0430 (0x430) product 100e (0x100e), class 9/0, rev 2.00/1.04, addr 3
uhub5: 4 ports with 3 removable, bus powered
module_autoload: trying to load `usbverbose' before root is mounted
uhidev1 at uhub5 port 4 configuration 1 interface 0
module_autoload: trying to load `usbverbose' before root is mounted
uhidev1: vendor 0430 (0x430) Sun USB Keyboard (0xa2), rev 2.00/1.04, addr 4, iclass 3/1
ukbd0 at uhidev1: 8 modifier keys, 6 key codes
wskbd1 at ukbd0: console keyboard, using wsdisplay0
wd1: transfer error, downgrading to Ultra-DMA mode 4
wd1(aceride0:0:0): using PIO mode 4, Ultra-DMA mode 4 (Ultra/66) (using DMA)
wd1c: error reading fsbn 32 of 32-33 (wd1 bn 32; cn 0 tn 0 sn 32), retrying
wd1: (aborted command, interface CRC error)
wd1: soft error (corrected)
WARNING: 2 errors while detecting hardware; check system log.
root on dk0 dumps on dk0
root file system type: ffs
kern.module.path=/stand/sparc64/7.99.70/modules
wsdisplay0: screen 4 added (fb, vt100 emulation)

>Fix:
n/a

>Release-Note:

>Audit-Trail:
From: christos@zoulas.com (Christos Zoulas)
To: gnats-bugs@NetBSD.org, kern-bug-people@netbsd.org, 
	gnats-admin@netbsd.org, netbsd-bugs@netbsd.org
Cc: 
Subject: Re: kern/52174: lots of autoload errors
Date: Tue, 18 Apr 2017 14:05:48 -0400

 On Apr 18,  7:15am, martin@NetBSD.org (martin@NetBSD.org) wrote:
 -- Subject: kern/52174: lots of autoload errors

 | >Number:         52174
 | >Category:       kern
 | >Synopsis:       lots of autoload errors
 | >Confidential:   no
 | >Severity:       non-critical
 | >Priority:       medium
 | >Responsible:    kern-bug-people
 | >State:          open
 | >Class:          sw-bug
 | >Submitter-Id:   net
 | >Arrival-Date:   Tue Apr 18 07:15:00 +0000 2017
 | >Originator:     Martin Husemann
 | >Release:        NetBSD 7.99.70
 | >Organization:
 | The NetBSD Foundation, Inc.
 | >Environment:
 | System: NetBSD whoever-brings-the-night.aprisoft.de 7.99.70 NetBSD 7.99.70 (WHOEVER) #112: Mon Apr 17 20:30:18 CEST 2017 martin@martins.aprisoft.de:/ssd/src/sys/arch/sparc64/compile/WHOEVER sparc64
 | Architecture: sparc64
 | Machine: sparc64
 | >Description:
 | 
 | The new diagnostic message for autoloading modules before / is available
 | triggers a lot. Maybe we should pass an optional flag for "verbose" modules
 | and be silent about them?

 I will remove the code. It is not adequate anyway. We need to rethink this.

 christos

From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/52174 CVS commit: src/sys/kern
Date: Tue, 18 Apr 2017 14:07:30 -0400

 Module Name:	src
 Committed By:	christos
 Date:		Tue Apr 18 18:07:30 UTC 2017

 Modified Files:
 	src/sys/kern: kern_module.c

 Log Message:
 PR/52174: Remove root test, it is too verbose. XXX: need to come up with
 something better.


 To generate a diff of this commit:
 cvs rdiff -u -r1.123 -r1.124 src/sys/kern/kern_module.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: martin@NetBSD.org
State-Changed-When: Sat, 29 Apr 2017 06:20:23 +0000
State-Changed-Why:
The message was backed out


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.