PR/52174: Remove root test, it is too verbose. XXX: need to come up with something better.